# spiffworkflow-proxy

./: README.md  dev.Dockerfile  pyproject.toml
.github/workflows/: tests.yml
src/spiff_connector/: plugin_service.py  spiff_connector_blueprint.py
src/spiffworkflow_proxy/: blueprint.py  plugin_service.py
tests/: test_main.py
tests/mock_connectors/connector-example/: README.md  pyproject.toml
tests/mock_connectors/connector-example/src/connector_example/: someHelper.py  some_helper.py
tests/mock_connectors/connector-example/src/connector_example/commands/: async_body_status.py  combineStrings.py  combine_strings.py
tests/spiff_connector/: plugin_service_test.py
tests/spiff_connector/integration/: blueprint_test.py
tests/spiff_connector/unit/: plugin_service_test.py
tests/spiffworkflow_proxy/integration/: blueprint_test.py
tests/spiffworkflow_proxy/unit/: plugin_service_test.py
tests/spiffworkflow_proxy_blueprint/unit/: plugin_service_test.py
